--- a/example_settings/settings.json
+++ b/example_settings/settings.json
@@ -1,17 +1,17 @@
 {
   "inp_vals": {
-    "sz_canvas": "1000",
-    "nu_nodes": "50",
-    "nu_edges": "100",
-    "wd_line": "2",
-    "nu_branches": "2",
-    "nu_scatter": "30",
-    "nu_alpha": "50"
+    "sz_canvas": 1050,
+    "nu_nodes": 10,
+    "nu_edges": 50,
+    "wd_line": 2,
+    "nu_branches": 3,
+    "nu_scatter": 30,
+    "nu_alpha": 50
   },
   "colours": {
-    "fill_colour": "#00ffff",
-    "outline_col": "#ffff00",
-    "line_colour": "#ff7f00",
+    "fill_colour": "#ff0000",
+    "outline_col": "#00ff00",
+    "line_colour": "#0000ff",
     "trc_fil_col": "#2B3736",
     "trc_oli_col": "#364141",
     "trc_lin_col": "#344D56"
@@ -22,14 +22,15 @@
     "dist_modifier": 150,
     "large_dist_div": 40,
     "small_dist_div": 30,
-    "dist_threshold": 100,
+    "dist_threshold": 120,
     "nudge_size": 5
   },
   "node_size": {
-    "s0": 25,
-    "s1": 15
+    "s0": 30,
+    "s1": 20
   },
   "tracing": false,
+  "labelling": true,
   "node_shape": "e",
-  "graphalg_index": 5
+  "graphalg_index": 3
 }
